--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Spectrum Quantitative Strategies</title>
 </head>
 <body style="background: white;">
-<div style="width:714px;height:315px;margin:auto;margin-top:100px;text-align:center;background-image: url(static/spectrum.jpg);background-position: center top;">
+<div style="width:714px;height:315px;margin:auto;margin-top:100px;text-align:center;background-image: url(spectrum.jpg);background-position: center top;">
 </div>
 </body>
 </html>
